--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,23 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+     /*-------------included libraries--------------*/
+
+    implementation 'com.google.code.gson:gson:2.8.2'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
     implementation 'com.intuit.sdp:sdp-android:1.0.5'
+
+    implementation 'com.jakewharton:butterknife:8.8.1'
+
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+     /*---------------------------------------------*/
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
