--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
-     /*-------------included libraries--------------*/
+    /*-------------included libraries--------------*/
 
     implementation 'com.google.code.gson:gson:2.8.2'
 
@@ -34,9 +34,10 @@ dependencies {
 
     implementation 'com.jakewharton:butterknife:8.8.1'
 
+    implementation 'com.android.support:support-v4:26.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-     /*---------------------------------------------*/
+    /*---------------------------------------------*/
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
