--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,12 +30,16 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
+    compile 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+
     implementation 'com.intuit.sdp:sdp-android:1.0.5'
 
     implementation 'com.jakewharton:butterknife:8.8.1'
 
     implementation 'com.android.support:support-v4:26.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    implementation 'org.greenrobot:eventbus:3.1.1'
 
     /*---------------------------------------------*/
 
