--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 
     implementation 'org.greenrobot:eventbus:3.1.1'
 
+    implementation 'com.greysonparrelli.permiso:permiso:0.3.0'
+
     /*---------------------------------------------*/
 
     testImplementation 'junit:junit:4.12'
